--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 *.gem
 *.rbc
+*.DSYM
 .bundle
 .config
 .yardoc
@@ -15,3 +16,5 @@ spec/reports
 test/tmp
 test/version_tmp
 tmp
+lib/rubysl/etc/etc.rb
+Makefile
